# Fastapi

./: alembic.ini  api.py  config.py  models.py  pyproject.toml  response_models.py
alembic/versions/: d97f07dfa2b8_migration.py
